Fixed bug of author not showing and addded functionality to delete your own comment

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
   height: 100vh;
@@ -15,8 +20,19 @@ nav {
 .article {
   border: solid green;
 }
+.articleLink {
+  background: olive;
+  text-decoration: none;
+}
 .header {
-  background: orange;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px;
+  color: red;
+  background: black;
+  text-align: center;
 }
 .comments {
   border: solid black;
@@ -49,4 +65,12 @@ button {
   box-shadow: 1px 2px 10px rgb(5, 3, 29);
   border-radius: 50%;
   text-align: center;
+}
+.cooking {
+  background-image: url('images/2cd43b_1faf930b60b04065ab6198380a350ecd_mv2.png');
+  color: black;
+  opacity: 0.4;
+}
+
+image {
 }
